infrastructure/base/longhorn-system/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.${CLUSTER_DOMAIN}`)
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
  tls:
    certResolver: cloudflare
